--- a/2025-12/2025-12-04.md
+++ b/2025-12/2025-12-04.md
@@ -2,8 +2,10 @@
 
 ## @interface
  - アノテーションを定義するときは普通の`interface`ではなく、`@interface`を使用する。
- - `@interface`を使用したクラスはコンパイル後`public interface MyAnno extends java.lang.annotation.Annotation`
+ - `@interface`を使用したクラスはコンパイル後`java.lang.annotation.Annotation`を継承したクラスになる。
+
 ## @Documented
+ - 
 
 ## @Constraint
 
